--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -5,6 +5,15 @@ edition = "2024"
 
 [dependencies]
 warp = "0.3.7"
-tokio = {version="1", features=["full"]}
+tokio = { version = "1", features = ["full"] }
 tempfile = "3.20.0"
 bytes = "1.10.1"
+serde_json = "1.0.107"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+tdx-attestation = { git="https://github.com/heytdep/rs-modular-dstack", rev="993222b"}
+tsm-client = { git="https://github.com/tpluslabs/rs-configfs-tsm-quoting", rev="0b3bf98" }
+anyhow = "1.0.97"
+dcap-qvl = "0.1.6"
+hex = "0.4.3"
+sha2 = "0.10.9"
