--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -8,6 +8,7 @@ warp = "0.3.7"
 tokio = { version = "1", features = ["full"] }
 tempfile = "3.20.0"
 bytes = "1.10.1"
+serde = {version="1", features=["derive"]}
 serde_json = "1.0.107"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
